--- a/src/index.scss
+++ b/src/index.scss
@@ -105,3 +105,13 @@ button {
   color: white;
   outline-color: $accent-color-secondary;
 }
+
+.error {
+  color: $accent-color-primary-light;
+  border: 2px solid $accent-color-secondary;
+  background-color: $darken-small;
+  box-shadow: 0 0 12px 0 $accent-color-secondary;
+  font-weight: 700;
+  text-align: center;
+  padding: 1em 2em;
+}
