--- a/src/index.scss
+++ b/src/index.scss
@@ -49,6 +49,7 @@ button {
     text-align: center;
     text-transform: uppercase;
     margin-bottom: 40px;
+    letter-spacing: 0.05em;
   }
   label {
     font-weight: 700;
