--- a/src/containers/SignUpBlock/SignUpBlock.scss
+++ b/src/containers/SignUpBlock/SignUpBlock.scss
@@ -44,33 +44,8 @@
 }
 
 .submit-block {
-  display: flex;
-  flex-direction: column;
+  @extend %user-show;
   align-items: center;
-  .image {
-    width: 200px; height: 200px;
-    border: 1px solid $accent-color-primary-dark;
-    background-position:  center;
-    background-size: cover;
-  }
-  p {
-    text-transform: uppercase;
-    font-size: 24px;
-    text-align: center;
-    margin-top: 40px;
-  }
-  .location {
-    text-transform: capitalize;
-    margin-top: 10px;
-    &:before {
-      content: "";
-      background-image: url('../../assets/pin.svg');
-      background-position: center;
-      background-repeat: no-repeat;
-      width: 20px; height: 24px;
-      display: inline-block;
-    }
-  }
   div {
     display: flex;
     margin: 40px;
