--- a/src/components/ParkCardPreview/ParkCardPreview.scss
+++ b/src/components/ParkCardPreview/ParkCardPreview.scss
@@ -5,6 +5,7 @@
   background-color: $darken-small;
   padding: 20px;
   width: 30%;
+  margin-bottom: 20px;
   .preview {
     width: 100%; height: 200px;
     background-position: center;
@@ -19,6 +20,7 @@
         cursor: pointer;
         width: 20px;
         @extend %click-action;
+        margin: 0 10px;
       }
     }
   }
