--- a/src/containers/ParksContainer/ParksContainer.scss
+++ b/src/containers/ParksContainer/ParksContainer.scss
@@ -1,5 +1,8 @@
 .parks-content {
-  padding: 40px 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 40px;
   width: 100%;
   overflow: scroll;
 }
