--- a/src/containers/ParksContainer/ParksContainer.scss
+++ b/src/containers/ParksContainer/ParksContainer.scss
@@ -1,7 +1,7 @@
 .parks-content {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-start;
   padding: 40px;
   width: 100%;
   overflow: scroll;
