--- a/src/index.scss
+++ b/src/index.scss
@@ -125,6 +125,7 @@ button {
     background-position:  center;
     background-size: cover;
     background-repeat: no-repeat;
+    box-shadow: 0 0 1px 0 $accent-color-primary-light;
   }
   p {
     text-transform: uppercase;
