Update loading text

--- a/src/components/LoadingImage/LoadingImage.scss
+++ b/src/components/LoadingImage/LoadingImage.scss
@@ -8,10 +8,10 @@
     background-color: $bg-color-primary;
     color: $accent-color-primary-dark;
     font-weight: 700;
-    letter-spacing: 0.5em;
+    letter-spacing: 0.6em;
     position: absolute;
     bottom: 30vh;
-    padding: 10px;
+    text-align: justify;
   }
   &>img {
     width: 150px;
